--- a/CSIA1.ipynb
+++ b/CSIA1.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "link = \"https://drive.google.com/file/d/1tZy-CEorxeWw2miCsTZkZMwl5rQxRUZa/view?usp=sharing\"\n",
+    "link = \"http://pythonpedia.in/goodreads_books_children.json.gz\"\n",
     "f = urllib.urlopen(link)\n",
     "myfile = f.read()\n",
     "with gzip.open(myfile, 'r') as f: #opening the gzip file and reading it\n",
